--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
             <nav class="navbar navbar-expand-lg bg-light shadow-lg">
                 <div class="container">
-                    <a style="width: 88px;" class="navbar-brand" href="kva.html" target="_blank">
+                    <a  class="navbar-brand o" href="kva.html" target="_blank">
                         <img class="img-logo o" src="./images/KVA Negro 2.png">
                     </a>
 
@@ -87,7 +87,7 @@
                         </ul>
                     </div>
 
-                    <a style="width: 10%;" target="_blank" href="https://lumatech.com.ar/">  
+                    <a  class="navbar-brand" target="_blank" href="https://lumatech.com.ar/">  
                         <img class="img-logo" src="./images/logo.png">
                     </a>
                   
@@ -293,7 +293,7 @@ Bienvenidos a la nueva era, bienvenidos a KVA Group.
                         <span class="custom-link mt-3 mb-5" class="custom-link"> +5491141795327 </span>
                     </div>
                     <div class="col-6" style="text-align: center;">
-                        <div> <img style="width: 182px;" src="./images/logo.png"></div>
+                        <div> <img style="width: 150px;" src="./images/logo.png"></div>
                        
                         <a href="mailto:info@company.com" class="custom-link mt-3">
                             info@company.com
