--- a/kva.html
+++ b/kva.html
@@ -66,7 +66,7 @@
                 <div class="container">
                     <div style="width: 40%;">
                         <a class="navbar-brand" href="index.html">
-                         <img style="width: 20%;" src="./images/KVA (1).png">
+                         <img class="img-logo" src="./images/KVA (1).png">
                         </a>
                     </div>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -461,7 +461,7 @@
                     
                     </div>
 
-                    <div class="col-lg-3 col-5 ms-auto">
+                    <div class="col-lg-3 col-6 ms-auto">
                         <ul class="social-icon">
                             <li><a href="https://www.facebook.com/kvainstalaciones" target="_blank" class="social-icon-link bi-facebook"></a></li>
 
